Fix odd cluster background-clip problems on iOS

--- a/app/assets/stylesheets/MarkerCluster.css.sass
+++ b/app/assets/stylesheets/MarkerCluster.css.sass
@@ -41,9 +41,8 @@ $size-marker-border: 2.5px
   box-sizing: content-box
 
   border: $size-marker-border solid white
-  border-color: rgba(white, 0.8)
+  border-color: white
 
-  background-clip: padding-box
   border-radius: 200%
 
   text-align: center
